syntax = "proto3";

option csharp_namespace = "Borealis.Portal.Infrastructure";

import "google/protobuf/empty.proto";

package protal;

// The greeting service definition.
service CoreService {

	rpc SetFrame(stream Frame) returns (google.protobuf.Empty);

}

// The greeting service definition.
service LedstripConfigurationService {
  // Sends a greeting
  rpc SetConfiguration(Configuration) returns (google.protobuf.Empty);
  rpc GetConfiguration(google.protobuf.Empty) returns (Configuration);

}


message Frame {
	int32 LedstripIndex = 1;
	bytes Data = 2;
}

message Configuration {
	string json = 1;
}

